--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,11 +6,11 @@
         <div>
             <!-- A wrapper for all the blog posts -->
             <div class="posts">
-                <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
+                <h1><a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a></h1>
+                <h6 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h6>
                 <section class="post">
                     <header class="post-header">
 
-                        <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
 
                         <p class="post-meta">
                             {{ with .Params.author }}
