--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,18 +1,18 @@
 {{ partial "header.html" . }}
 
 <div id="layout" class="pure-g">
-    {{ partial "sidebar.html" . }}
+
 
     <div class="content pure-u-1 pure-u-md-3-4">
         <div>
             <!-- A wrapper for all the blog posts -->
             <div class="posts">
                 {{ range .Paginator.Pages }}
-                <h1 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h1>
+                <h1><a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a></h1>
+                <h6 class="content-subhead">{{ .Date.Format "02 Jan 2006, 15:04" }}</h6>
                 <section class="post">
                     <header class="post-header">
 
-                        <a href="{{ .Permalink }}" class="post-title">{{ .Title }}</a>
 
                         <p class="post-meta">
                             {{ with .Params.author }}
@@ -37,6 +37,7 @@
             {{ partial "footer.html" . }}
         </div>
     </div>
+    {{ partial "sidebar.html" . }}
 </div>
 {{ partial "analytics.html" . }}
 </body>
